# gs-desktop

./: .gitignore  BUILD_SETTINGS.conf  BUILD_SETTINGS.conf.clang  BUILD_SETTINGS.conf.free  BUILD_SETTINGS.conf.gcc  BUILD_SETTINGS.sh  LICENSE  README.md  WELCOME.txt  build_world.sh  clean_world.sh  document_world.sh  fetch_world.sh  index.html  publish.command
Admin/: Network-Info.command
Frameworks/PDFKit/: GNUmakefile  GNUmakefile.in  GNUmakefile.postamble  GNUmakefile.preamble  PDFDocument.h  PDFDocument.m  PDFFontManager.h  PDFFontManager.m  PDFImageRep.h  PDFImageRep.m  PDFOutline.h  PDFOutline.m  PDFPrintView.h  PDFPrintView.m  config.status  configure  configure.ac  xpdf-src
Frameworks/PDFKit/Documentation/: ChangeLog  Contributors.txt  INSTALL  README.license
Frameworks/PDFKit/Fonts/: n022003l.pfb  n022023l.pfb
Frameworks/PDFKit/xpdf/: GNUmakefile  GNUmakefile.postamble
Frameworks/PDFKit/xpdf/bridge/: CountingRef.h  CountingRef.m  DPS.h  DPS.m  GNUmakefile  GNUmakefile.in  Locking.m  XPDFBridge.cc  XPDFBridge.h
Frameworks/PDFKit/xpdf/xpdf-3.04/: GNUmakefile  GNUmakefile.in  Makefile  Makefile.in  config.status
Frameworks/netclasses/: ChangeLog  GNUmakefile  GNUmakefile.in  GNUmakefile.postamble  Info.plist  README  README.osx  config.status  configure  configure.ac
Frameworks/netclasses/Documentation/: GNUmakefile  GNUmakefile.postamble  index.gsdoc  overview.gsdoc  synchronous.gsdoc
Frameworks/netclasses/English.lproj/: InfoPlist.strings
Frameworks/netclasses/Examples/: GNUmakefile  GNUmakefile.postamble
Frameworks/netclasses/Source/: GNUmakefile  GNUmakefile.in  GNUmakefile.preamble  IRCObject.h  IRCObject.m  LineObject.h  LineObject.m  NetBase.h  NetBase.m  NetTCP.h  NetTCP.m  config.h  config.h.in
Frameworks/netclasses/netclasses-T.xcodeproj/: project.pbxproj
Frameworks/netclasses/netclasses.xcode/: project.pbxproj
Frameworks/netclasses/testsuite/: GNUmakefile  GNUmakefile.postamble  GNUmakefile.preamble  conversions.m  testsuite.h  testtcp.m
(+2199 files in other folders)
